k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ${HOME_URL_FINAL}  
      http:
        paths:
          - path: /endpoint/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nextjs-service  
                port:
                  number: 80
